[package]
name = "ksmapgui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
ksmap = { path = "../ksmap" }
image = { git = "https://github.com/spindlymist/image-rs.git", branch = "version-0.25" }
imgui_app = { git = "https://github.com/spindlymist/imgui_app" }
libks = { git = "https://github.com/spindlymist/libks.git" }
libks_ini = { git = "https://github.com/spindlymist/libks.git" }
rustc-hash = "2.1.2"
