[package]
name = "ksmap"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
byteorder-lite = "0.1.0"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
libks = { git = "https://github.com/spindlymist/libks.git" }
libks_ini = { git = "https://github.com/spindlymist/libks.git" }
mtpng = { git = "https://github.com/spindlymist/mtpng.git" }
petgraph = "0.8.3"
png = { git = "https://github.com/spindlymist/image-png" }
rand = "0.10.1"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
