[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
glob = "0.3.3"
ksmap = { path = "../ksmap" }
libks = { git = "https://github.com/spindlymist/libks.git" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
