[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
ksmap = { path = "../ksmap" }
libks = { git = "https://github.com/spindlymist/libks.git" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
